<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light"
    tools:context=".app.TraceReportActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/Tracciamento"
                    android:textColor="@android:color/black"
                    android:textSize="30sp"
                    android:typeface="serif" />

                <ImageButton
                    android:id="@+id/sendButton"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/grey_light"
                    android:clickable="true"
                    android:contentDescription="TODO"
                    android:scaleType="centerInside"
                    android:tint="@color/blue_main"
                    app:srcCompat="@android:drawable/stat_sys_upload" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/ConsentiTracciamento"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:typeface="serif"
                        app:layout_constraintEnd_toStartOf="@+id/sendButton"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/traceStatus"
                            android:layout_width="310dp"
                            android:layout_height="57dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/inter_bold"
                            android:gravity="center_vertical"
                            android:text="@string/TRACCIAMENTOATTIVO"
                            android:textAlignment="textStart"
                            android:textColor="@color/status_blue"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:typeface="serif"
                            android:visibility="visible" />

                        <ImageView
                            android:id="@+id/shield"
                            android:layout_width="63dp"
                            android:layout_height="match_parent"
                            android:layout_margin="6dp"
                            android:layout_weight="1"
                            android:cropToPadding="false"
                            android:scaleType="centerInside"
                            android:textAlignment="viewEnd"
                            app:srcCompat="@drawable/icons8_security_checked" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/inter_regular"
                            android:text="@string/info"
                            android:textAlignment="textStart"
                            android:textColor="@color/anthracite"
                            android:textSize="16sp"
                            android:typeface="serif"
                            android:visibility="visible" />

                        <Switch
                            android:id="@+id/switch1"
                            android:layout_width="63dp"
                            android:layout_height="match_parent"
                            android:layout_margin="6dp"
                            android:buttonTint="@color/status_blue"
                            android:checked="true"
                            android:trackTint="@color/blue_main"
                            tools:checked="true" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/Segnalazioni"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:typeface="serif" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardMiddle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="@dimen/card_border_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/NessunaSegnalazione"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:typeface="serif"
                        app:layout_constraintEnd_toStartOf="@+id/sendButton"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="57dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/NoSegnalazioni"
                        android:textAlignment="textStart"
                        android:textColor="@color/anthracite"
                        android:textSize="16sp"
                        android:typeface="serif"
                        android:visibility="visible" />

                    <Button
                        android:id="@+id/CallHRbutton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#2B7B1D"
                        android:text="@string/CallHR"
                        android:textColor="#FFFFFF"
                        android:visibility="invisible" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:clickable="false"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:fontFamily="@font/inter"
                        android:text="@string/onboarding_good_to_know"
                        android:textAlignment="textStart"
                        android:textColor="@color/status_blue"
                        android:textSize="18sp"
                        android:textStyle="normal"
                        android:typeface="serif"
                        android:visibility="visible" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/descrizione_icon"
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="@dimen/spacing_medium_large"
                            android:background="@drawable/ic_account_circle_black_24dp"
                            android:tint="@color/blue_main"
                            app:srcCompat="@drawable/ic_account_circle_black_24dp"
                            tools:src="@drawable/ic_account_circle_black_24dp"
                            tools:srcCompat="@drawable/ic_account_circle_black_24dp" />

                        <TextView
                            android:id="@+id/descrizione"
                            style="@style/NextStep.Text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:breakStrategy="high_quality"
                            android:hyphenationFrequency="full"
                            android:text="@string/goodtoKnow1"
                            android:textSize="14sp"
                            tools:text="L'app riconosce automaticamente quando due utenti sono stati in prossimità per un periodo di tempo sufficiente a ipotizzare un possibile contagio" />

                    </LinearLayout>



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/descrizione_2_icon"
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="@dimen/spacing_medium_large"
                            android:background="@drawable/ic_bluetooth"
                            android:contentDescription="TODO"
                            android:tint="@color/blue_main"
                            app:srcCompat="@drawable/ic_battery_power"
                            tools:src="@drawable/ic_battery_power"
                            tools:srcCompat="@drawable/ic_battery_power" />

                        <TextView
                            android:id="@+id/descrizione2"
                            style="@style/NextStep.Text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:breakStrategy="high_quality"
                            android:hyphenationFrequency="full"
                            android:text="@string/goodtoknow2"
                            android:textSize="14sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/versioneLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/Version"
                android:textColor="@color/dark_main"
                android:textSize="10sp" />
        </LinearLayout>
    </ScrollView>


    <RelativeLayout
        android:id="@+id/relativelayout_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#aa000022"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateOnly="true" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>